deploy/envoy.yaml
static_resources:
  listeners:
  - name: http_listener
    address:
      socket_address: { address: 0.0.0.0, port_value: 8080 }
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: http
          tracing:
            provider:
              name: envoy.tracers.opentelemetry
              typed_config:
                "@type": type.googleapis.com/envoy.config.trace.v3.OpenTelemetryConfig
                grpc_service:
                  envoy_grpc:
                    cluster_name: otel_collector
                  timeout: 0.250s
                service_name: envoy-proxy
            spawn_upstream_span: true
            random_sampling:
              value: 100.0
          generate_request_id: true
          preserve_external_request_id: true
          route_config:
            name: local_route
            virtual_hosts:
            - name: shipment_host
              domains: ["*"]
              routes:
              - match: { prefix: "/api/v1" }
                route:
                  cluster: shipment_service
                decorator:
                  operation: shipment_api
          http_filters:
          - name: envoy.filters.http.router
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router

  - name: grpc_listener
    address:
      socket_address: { address: 0.0.0.0, port_value: 9090 }
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: grpc
          codec_type: AUTO
          tracing:
            provider:
              name: envoy.tracers.opentelemetry
              typed_config:
                "@type": type.googleapis.com/envoy.config.trace.v3.OpenTelemetryConfig
                grpc_service:
                  envoy_grpc:
                    cluster_name: otel_collector
                  timeout: 0.250s
                service_name: envoy-proxy
            spawn_upstream_span: true
            random_sampling:
              value: 100.0
          generate_request_id: true
          preserve_external_request_id: true
          route_config:
            name: grpc_route
            virtual_hosts:
            - name: customer_host
              domains: ["*"]
              routes:
              - match: { prefix: "/customer.Customer/" }
                route:
                  cluster: customer_service
                  timeout: 0s
                decorator:
                  operation: customer_grpc
          http_filters:
          - name: envoy.filters.http.router
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router

  clusters:
  - name: shipment_service
    connect_timeout: 0.25s
    type: logical_dns
    lb_policy: round_robin
    load_assignment:
      cluster_name: shipment_service
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: shipment-service
                port_value: 8080

  - name: customer_service
    connect_timeout: 0.25s
    type: logical_dns
    lb_policy: round_robin
    typed_extension_protocol_options:
      envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
        "@type": type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
        explicit_http_config:
          http2_protocol_options: {}
    load_assignment:
      cluster_name: customer_service
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: customer-service
                port_value: 9090

  - name: otel_collector
    connect_timeout: 0.25s
    type: logical_dns
    lb_policy: round_robin
    typed_extension_protocol_options:
      envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
        "@type": type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
        explicit_http_config:
          http2_protocol_options: {}
    load_assignment:
      cluster_name: otel_collector
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: otel-collector
                port_value: 4317
